# ProxyMaker

./: .gitignore  CMakeLists.txt  card.cpp  card.h  configuration.cpp  configuration.h  homebrew.cmake  image_processing.cpp  image_processing.h  json.h  main.cpp  paper.cpp  paper.h  pdf_generation.cpp  pdf_generation.h  scryfall.cpp  scryfall.h  utility.cpp  utility.h
